# thor_simulator

./: README.md
gripper_description/: CMakeLists.txt  package.xml  urdf.rviz
gripper_description/config/: controllers.yaml  joint_names_gripper_description.yaml
gripper_description/launch/: display.launch  gazebo.launch
gripper_description/meshes/: base_link.STL  finger1_link.STL  finger2_link.STL  gripper_link.STL  rubber1.STL  rubber2.STL
gripper_description/scripts/: spawn_bar.py
gripper_description/urdf/: gripper.gazebo  gripper.urdf.xacro  single_gripper.xacro  transmission.xacro  transmission_position.xacro
thor_description/: CMakeLists.txt  moveit.rviz  package.xml  urdf_xacro.rviz
thor_description/config/: joint_names_thor_description.yaml  pid_calib  pid_calib.txt  thor_controllers.yaml
thor_description/launch/: display.launch  gazebo.launch  gazebo_calibration.launch  gazebo_moveit.launch
thor_description/meshes/: Art1_Link.STL  Art2_Link.STL  Art3_Link.STL  Art4_Link.STL  Art5_Link.STL  Art6_Link.STL  base_link.STL
thor_description/meshes/simple/: Art1_Link.STL  Art2_Link.STL  Art3_Link.STL  Art4_Link.STL  Art5_Link.STL  Art6_Link.STL  base_link.STL
thor_description/urdf/: thor_calibration.xacro  thor_description.urdf.xacro  thor_standalone.xacro  transmission.xacro
thor_msgs/: CMakeLists.txt  package.xml
thor_msgs/scripts/: close_gripper.py
thor_msgs/srv/: GripperControl.srv
thor_standalone_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
thor_standalone_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  thor.srdf
thor_standalone_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  thor_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
thor_test/: CMakeLists.txt  package.xml
thor_test/scripts/: bar.sdf  box.sdf  cilinder.sdf  grab_bar.py  grab_box.py  pose_test.py  pose_test_300points.xlsx  pose_test_4000_xyz.csv  pose_test_4050_xy.csv  pose_test_4050_xy_sync.csv  rotate_bar.py  spawn_bar.py  spawn_box.py  test.csv
